refacto sugges